# json-parser

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
examples/: test.json
src/: error_handling.py  lexer.py  main.py  parser.py
